fix install flow and add dynamic form driven request support
